# CSVd

./: CMakeLists.txt  LICENSE  README.md  diff.txt  new_data.csv
.github/workflows/: test_with_clang.yml  test_with_gcc.yml
examples/: bode.csv  bode_cell_too_long.csv  bode_float_error.csv  bode_line_overflow.csv  bode_unexpected_line_separator.csv  bode_without_header.csv  example.cpp
include/csvd/: csvd.hpp
src/: csvd.cpp
tests/: tests.cpp
